These are the release notes for the Live Translate extension.
	
Extension page on mediawiki.org: http://www.mediawiki.org/wiki/Extension:Live_Translate
Latest version of the release notes: http://svn.wikimedia.org/viewvc/mediawiki/trunk/extensions/LiveTranslate/RELEASE-NOTES?view=co


=== Version 0.4 ===
2011-01-xx

* Added Google branding, which is required when using the Google Translate API.
: https://code.google.com/apis/language/translate/v1/getting_started.html#getBranding

=== Version 0.3 ===
2011-01-07

* Added compatibility with IE8.
* Fixed issue with trim-prevention, causing |-signs to semi-randomly get inserted into translated text.
* Only show the translation control when an API key is provided.

=== Version 0.2 ===
2010-12-24

* Fixed installation compatibility issue with MW 1.16.
* Fixed display of translation control to only happen on existing pages.
* Fixed issues with inserting notranslatre tags into the page source.

=== Version 0.1 ===
2010-12-22

* Added simple translation interface to the right top of articles.
* Implemented translation via the Google Translate API.
* Added dictionary for special words with synonyms support.